olap.result, olap.test:   Added test cases for bug #7894. sql_select.cc:   Fixed bug #7894: GROUP BY queries with ROLLUP returned   wrong results for expressions containing group by columns.   The fix ensured correct results by replacement of all   occurrences of group by fields in non-aggregate expressions   for corresponding ref objects and preventing creation of   fields in temporary tables for expression containing group   by fields.